--- a/index.html
+++ b/index.html
@@ -1,12 +1,30 @@
 <!DOCTYPE html>
 <html>
-<head>
-<title>Stephanie Price's Personal Website </title>
-<!-- link to main stylesheet -->
+	<head>
+		<title>Stephanie Price</title>
+		<!-- link to main stylesheet -->
 		<link rel="stylesheet" type="text/css" href="/css/main.css">
-</head>
-<body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
-</body>
+	</head>
+	<body>
+		<nav>
+    		<ul>
+        		<li><a href="/">Home</a></li>
+	        	<li><a href="/about">About</a></li>
+        		<li><a href="/cv">CV</a></li>
+        		<li><a href="/blog">Blog</a></li>
+    		</ul>
+		</nav>
+		<div class="container">
+    		<div class="blurb">
+        		<h1>Hi there, I'm Stephanie Price!</h1>
+				<p>Text <em>Text</em>. Text. <a href="/about">Read more about my life...</a></p>
+    		</div><!-- /.blurb -->
+		</div><!-- /.container -->
+		<footer>
+    		<ul>
+        		<li><a href="mailto:price127@purdue.edu">email</a></li>
+        		<li><a href="https://github.com/stephaniemprice">github.com/stephaniemprice</a></li>
+			</ul>
+		</footer>
+	</body>
 </html>
