--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 		<link rel="stylesheet" type="text/css" href="/css/main.css">
 	</head>
 	<body>
+	<link rel="icon" href="http://piq.codeus.net/static/media/userpics/piq_51087_100x100.png">
 		<nav>
     		<ul>
         		<li><a href="/">Home</a></li>
