--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
 		<title>Stephanie Price</title>
 		<!-- link to main stylesheet -->
 		<link rel="stylesheet" type="text/css" href="/css/main.css">
+		<!-- adds browser tab icon. must be in head --> 
+		<link rel="icon" href="http://piq.codeus.net/static/media/userpics/piq_51087_100x100.png">
 	</head>
 	<body>
-	<link rel="icon" href="http://piq.codeus.net/static/media/userpics/piq_51087_100x100.png">
 		<nav>
     		<ul>
         		<li><a href="/">Home</a></li>
