--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<!-- link to main stylesheet -->
 		<link rel="stylesheet" type="text/css" href="/css/main.css">
 		<!-- adds browser tab icon. must be in head --> 
-		<link rel="icon" href="https://c1.staticflickr.com/5/4196/34851127972_70f785e0ff_t.jpg">
+		<link rel="icon" href="http://piq.codeus.net/static/media/userpics/piq_51087_100x100.png">
 	</head>
 	<body>
 		<nav>
