--- a/index.html
+++ b/index.html
@@ -1,32 +1,50 @@
-<!DOCTYPE html>
+<! DOCTYPE html>
+<html lang="en">
 <html>
-	<head>
-		<title>Stephanie Price</title>
-		<!-- link to main stylesheet -->
-		<link rel="stylesheet" type="text/css" href="/css/main.css">
-		<!-- adds browser tab icon. must be in head --> 
-		<link rel="icon" href="http://piq.codeus.net/static/media/userpics/piq_51087_100x100.png">
-	</head>
-	<body>
-		<nav>
-    		<ul>
-        		<li><a href="/">Home</a></li>
-	        	<li><a href="/about">About</a></li>
-        		<li><a href="/cv">CV</a></li>
-        		<li><a href="/blog">Blog</a></li>
-    		</ul>
-		</nav>
-		<div class="container">
-    		<div class="blurb">
-        		<h1>Hi there, I'm Stephanie Price!</h1>
-				<p>Text <em>Text</em>. Text. <a href="/about">Read more about my life...</a></p>
-    		</div><!-- /.blurb -->
-		</div><!-- /.container -->
-		<footer>
-    		<ul>
-        		<li><a href="mailto:price127@purdue.edu">email</a></li>
-        		<li><a href="https://github.com/stephaniemprice">github.com/stephaniemprice</a></li>
-			</ul>
-		</footer>
-	</body>
+<head>
+<title> Stephanie M. Price </title>
+<!-- link to main stylesheet -->
+<link rel="stylesheet" type="text/css" href="C:/Users/Steph/Downloads/sitocss.css">
+<!-- favicon; must place in head -->
+<link rel="icon" href="https://c1.staticflickr.com/5/4242/35200504516_3b6cea0564_o.png">
+
+</head>
+
+<body>
+
+<div id="wrapper">
+<!-- navbar -->
+
+<div id="navbar">
+
+<ul>
+
+<li><a href="/">Home</a></li>
+<li><a href="/education">Education</a></li>
+<li><a href="/projects">Experience</a></li>
+<li><a href="/leadership">Leadership</a></li>
+<li><a href="/Awards">Awards</a></li>
+
+</ul>
+</div>
+
+<!-- central text -->
+<div class="main">
+<h4><img src="https://c1.staticflickr.com/5/4224/35240296435_88287d0bea_o.png" style="max-height: 300px"></h4>
+<h1>Stephanie M. Price</h1>
+<hr>
+<h2>Welcome!</h2><br>
+Welcome to my homepage! I am a junior pursuing a Bachelors of Science degree in biochemistry at Purdue University, West Lafayette, Indiana. <p> Even when I was young, people would remark, "Why, she asks so many questions!". Years later, my curiousity has only increased; I decided to become a scientist, after all! <p> I am a dedicated life-long learner always asking questions and seeking answers. Within science, I am interested in protein chemistry, analytical chemistry, and bioinformatics. Additionally, I am passionate about learning about other cultures and have studied abroad twice to better enhance my worldview. I am currently seeking a company that shares my values of continual self-improvement and growth for an internship in summer 2018. <p>
+To learn more about my coursework, click the "Education" tab; about the research I have accomplished and technical skills I possess, click the "Projects" tab; about my extra-curricular activites, click the "Leadership" tab; about grants, awards, and scholarships I have earned, click the 'Awards' tab. You can also learn more about me by visiting my <a href="https://www.linkedin.com/in/stephanie-price-173293106/">LinkedIn</a>. You can also contact me at <a href="mailto:price127@purdue.edu">price127@purdue.edu</a>. 
+</div>
+
+
+<!--footer -->
+<div class= "foot">
+Website designed and coded by Stephanie M. Price. 
+</div>
+
+</div>
+
+</body>
 </html>
