--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
 <title> Stephanie M. Price </title>
 <!-- link to main stylesheet -->
-<link rel="stylesheet" type="text/css" href="/css/main.css">
+<link rel="stylesheet" type="text/css" href="stephaniemprice.github.io/css/main.css">
 <!-- favicon; must place in head -->
 <link rel="icon" href="https://c1.staticflickr.com/5/4242/35200504516_3b6cea0564_o.png">
 
@@ -19,7 +19,7 @@
 
 <ul>
 
-<li><a href="/">Home</a></li>
+<li><a href="/index.html">Home</a></li>
 <li><a href="/education">Education</a></li>
 <li><a href="/projects">Experience</a></li>
 <li><a href="/leadership">Leadership</a></li>
