--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <li><a href="/education">Education</a></li>
 <li><a href="/projects">Experience</a></li>
 <li><a href="/leadership">Leadership</a></li>
-<li><a href="/Awards">Awards</a></li>
+<li><a href="/awards">Awards</a></li>
 
 </ul>
 </div>
