--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
 <ul>
 
 <li><a href="/index.html">Home</a></li>
-<li><a href="/education">Education</a></li>
-<li><a href="/projects">Experience</a></li>
-<li><a href="/leadership">Leadership</a></li>
-<li><a href="/awards">Awards</a></li>
+<li><a href="/education.html">Education</a></li>
+<li><a href="/experience.html">Experience</a></li>
+<li><a href="/leadership.html">Leadership</a></li>
+<li><a href="/awards.html">Awards</a></li>
 
 </ul>
 </div>
@@ -35,7 +35,7 @@
 <hr>
 <h2>Welcome!</h2><br>
 Welcome to my homepage! I am a junior pursuing a Bachelors of Science degree in biochemistry at Purdue University, West Lafayette, Indiana. <p> Even when I was young, people would remark, "Why, she asks so many questions!". Years later, my curiousity has only increased; I decided to become a scientist, after all! <p> I am a dedicated life-long learner always asking questions and seeking answers. Within science, I am interested in protein chemistry, analytical chemistry, and bioinformatics. Additionally, I am passionate about learning about other cultures and have studied abroad twice to better enhance my worldview. I am currently seeking a company that shares my values of continual self-improvement and growth for an internship in summer 2018. <p>
-To learn more about my coursework, click the "Education" tab; about the research I have accomplished and technical skills I possess, click the "Projects" tab; about my extra-curricular activites, click the "Leadership" tab; about grants, awards, and scholarships I have earned, click the 'Awards' tab. You can also learn more about me by visiting my <a href="https://www.linkedin.com/in/stephanie-price-173293106/">LinkedIn</a>. You can also contact me at <a href="mailto:price127@purdue.edu">price127@purdue.edu</a>. 
+To learn more about my coursework, click the "Education" tab; about the research I have accomplished and technical skills I possess, click the "Experience" tab; about my extra-curricular activites, click the "Leadership" tab; about grants, awards, and scholarships I have earned, click the 'Awards' tab. You can also learn more about me by visiting my <a href="https://www.linkedin.com/in/stephanie-price-173293106/">LinkedIn</a>. You can also contact me at <a href="mailto:price127@purdue.edu">price127@purdue.edu</a>. 
 </div>
 
 
