--- a/education.html
+++ b/education.html
@@ -19,7 +19,7 @@
 <ul>
 <li><a href="/">Home</a></li>
 <li><a href="/education">Education</a></li>
-<li><a href="/projects">Experience</a></li>
+<li><a href="/experience">Experience</a></li>
 <li><a href="/leadership">Leadership</a></li>
 <li><a href="/awards">Awards</a></li>
 
