--- a/education.html
+++ b/education.html
@@ -4,7 +4,7 @@
 <head>
 <title> Stephanie M. Price </title>
 <!-- link to main stylesheet -->
-<link rel="stylesheet" type="text/css" href="C:/Users/Steph/Downloads/sitocss.css">
+<link rel="stylesheet" type="text/css" href="stephaniemprice.github.io/css/main.css">
 <!-- favicon; must place in head -->
 <link rel="icon" href="https://c1.staticflickr.com/5/4242/35200504516_3b6cea0564_o.png">
 
