--- a/education.html
+++ b/education.html
@@ -74,7 +74,7 @@
 <li> Prosser Pharmacy Technician Certification Program </li>
 <li>Latin: 4 years </li>
 <li>AP Environmental Science (AP Test Score: 5)</li>
-<li>AP Java (AP Test Score: 4)</li>
+<li>AP Computer Science A (AP Test Score: 4)</li>
 <li>AP Biology (AP Test Score: 5) </li>
 <li> AP Literature and Composition (AP Test Score: 5) </li>
 <li> AP Language and Composition (AP Test Score: 5)</li>
