--- a/leadership.html
+++ b/leadership.html
@@ -30,6 +30,10 @@
 <div class="main">
 <h1>Leadership</h1>
 <hr>
+  <h5>Moderator for <i>Conversazioni Creattive</i></h5>
+  <b>Centro Linguistico di Ateneo </b> | March - May 2017 <br>
+  I was the sole conversation moderator for <i>Conversazioni Creattive</i>, an organized conversation group that met weekly for an hour and a half. I assisted my group of 18 students with speaking English and I planned and executed activities to facilitate English learning.
+  <p>
 <h5>Student Ambassador</h5>
 <b>College of Agriculture</b> | August 2016 - present<br>
 I represent the College of Agriculture during interactions with prospective students and industry. For prospective students, I lead personalized campus tours, perform presentations about my college experience, and mail individualized thank-you notes. Additionally, I engage with industry representatives like Land O' Lakes through luncheons and through volunteer service at College of Agriculture career fairs and professional service days for Purdue Extension Staff.
