--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <!-- link to main stylesheet -->
 <link rel="stylesheet" type="text/css" href="stephaniemprice.github.io/css/main.css">
 <!-- favicon; must place in head -->
-<link rel="icon" href="https://c1.staticflickr.com/5/4242/35200504516_3b6cea0564_o.png">
+<link rel="icon" href="profilo_ritagliato.png">
 
 </head>
 
