--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 <hr>
 
 <h2>Welcome!</h2><br>
-<h4><img src="img/Sprice_photo.jpg" style="max-height: 350px"></h4><p>
+<h4><img src="img/SPrice_Photo.jpg" style="max-height: 350px"></h4><p>
 Welcome to my homepage! I am a college senior that will be graduating in May 2019. I am pursuing a Bachelor of Science degree in Biochemistry at Purdue University, West Lafayette, Indiana. <p> Even when I was young, people would remark, "Why, she asks so many questions!". Years later, my curiousity has only increased: I decided to become a scientist, after all! <p> I am a dedicated life-long learner always asking questions and seeking answers. Within science, I am interested in analytical chemistry, instrumentation, and data analysis. Additionally, I am passionate about learning about other cultures and have studied abroad three times to better enhance my world-view. I am currently seeking a company that shares my values of continual self-improvement and growth for full-time placement. <p>
 To learn more about my coursework, go <a href="education.html">here</a>; about the research I have accomplished and technical skills I possess, go <a href="experience.html">here</a>, about my extra-curricular activites, <a href="leadership.html">here</a>; about grants, awards, and scholarships I have earned, <a href="awards.html">here</a>. You can also learn more about me by visiting my <a href="https://www.linkedin.com/in/stephanie-price-173293106/">LinkedIn</a>. You can also contact me at <a href="mailto:price127@purdue.edu">price127@purdue.edu</a>. </p>
 </div>
