--- a/education.html
+++ b/education.html
@@ -29,6 +29,8 @@
 <!-- central text -->
 <div class="main">
 <h1>Education</h1>
+<br>
+<center><img src="img/Zygmunt_Scholarship.jpg"></center>
 <hr>
 <h2>Purdue University</h2>
 <h5>West Lafayette, Indiana</h5>
